<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_native_app_login_hint_1"
        android:textColor="#686868"

        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_native_app_login_hint_2"
        android:textColor="#686868"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_native_app_login_hint_3"
        android:textColor="#686868"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:hint="用户名"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_user_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:hint="密码"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_following1"
        android:gravity="center"
        android:text="登录"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_following2"
        android:gravity="center"
        android:text="注册"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tv_native_app_company_name" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" />
</LinearLayout>
